@@ -1,7 +1,6 @@
 package com.example.apitestapp.services;
 
 import com.google.gson.JsonObject;
-import com.google.gson.JsonParser;
 import okhttp3.*;
 
 import java.io.IOException;
@@ -27,7 +26,7 @@ public class ApiTestService {
 
     public ApiResponse callSignupApi(String phone, String password) {
         JsonObject requestBody = new JsonObject();
-        requestBody.addProperty("phone", phone);
+        requestBody.addProperty("phoneNumber", phone);
         requestBody.addProperty("password", password);
         String jsonString = requestBody.toString();
         return callApi("/api/v1/signup", jsonString);
@@ -43,117 +42,60 @@ public class ApiTestService {
 
     public ApiResponse callApi(String endpoint, String jsonBody) {
         try {
-            if (jsonBody == null || jsonBody.trim().isEmpty()) {
-                return ApiResponse.builder()
-                        .httpCode(0)
-                        .isSuccess(false)
-                        .responseBody("")
-                        .statusMessage("Error: Request body is empty")
-                        .build();
+            String normalizedMethod = method == null || method.isBlank() ? "POST" : method.trim().toUpperCase();
+            boolean allowsEmptyBody = "GET".equals(normalizedMethod) || "DELETE".equals(normalizedMethod);
+            if (!allowsEmptyBody && (jsonBody == null || jsonBody.trim().isEmpty())) {
+                return new ApiResponse(0, false, "", "Error: Request body is empty");
             }
 
-            RequestBody body = RequestBody.create(jsonBody, MediaType.parse("application/json; charset=utf-8"));
+            RequestBody body = null;
+            if (jsonBody != null && !jsonBody.trim().isEmpty()) {
+                body = RequestBody.create(jsonBody, MediaType.parse("application/json; charset=utf-8"));
+            }
 
-            Request request = new Request.Builder()
-                    .url(baseUrl + endpoint)
-                    .post(body)
-                    .addHeader("Content-Type", "application/json; charset=utf-8")
-                    .build();
+            Request.Builder requestBuilder = new Request.Builder()
+                    .url(resolveUrl(endpointOrUrl))
+                    .addHeader("Content-Type", "application/json; charset=utf-8");
+
+            if ("GET".equals(normalizedMethod)) {
+                requestBuilder.get();
+            } else if ("DELETE".equals(normalizedMethod)) {
+                if (body == null) {
+                    requestBuilder.delete();
+                } else {
+                    requestBuilder.delete(body);
+                }
+            } else {
+                requestBuilder.method(normalizedMethod, body);
+            }
+
+            Request request = requestBuilder.build();
 
             try (Response response = client.newCall(request).execute()) {
                 String responseBody = response.body() != null ? response.body().string() : "";
 
-                return ApiResponse.builder()
-                        .httpCode(response.code())
-                        .isSuccess(response.isSuccessful())
-                        .responseBody(responseBody)
-                        .statusMessage(response.message())
-                        .build();
+                return new ApiResponse(
+                        response.code(),
+                        response.isSuccessful(),
+                        responseBody,
+                        response.message()
+                );
             }
         } catch (IOException e) {
-            return ApiResponse.builder()
-                    .httpCode(0)
-                    .isSuccess(false)
-                    .responseBody("")
-                    .statusMessage("Error: " + e.getMessage())
-                    .build();
+            return new ApiResponse(0, false, "", "Error: " + e.getMessage());
         }
     }
 
-    public static class ApiResponse {
-        private final int httpCode;
-        private final boolean isSuccess;
-        private final String responseBody;
-        private final String statusMessage;
-
-        private ApiResponse(int httpCode, boolean isSuccess, String responseBody, String statusMessage) {
-            this.httpCode = httpCode;
-            this.isSuccess = isSuccess;
-            this.responseBody = responseBody;
-            this.statusMessage = statusMessage;
+    private String resolveUrl(String endpointOrUrl) {
+        if (endpointOrUrl == null || endpointOrUrl.isBlank()) {
+            return baseUrl;
         }
-
-        public static Builder builder() {
-            return new Builder();
+        if (endpointOrUrl.startsWith("http://") || endpointOrUrl.startsWith("https://")) {
+            return endpointOrUrl;
         }
-
-        public int getHttpCode() {
-            return httpCode;
+        if (endpointOrUrl.startsWith("/")) {
+            return baseUrl + endpointOrUrl;
         }
-
-        public boolean isSuccess() {
-            return isSuccess;
-        }
-
-        public String getResponseBody() {
-            return responseBody;
-        }
-
-        public String getStatusMessage() {
-            return statusMessage;
-        }
-
-        public String getResponseCode() {
-            try {
-                JsonObject json = JsonParser.parseString(responseBody).getAsJsonObject();
-                if (json.has("code")) {
-                    return String.valueOf(json.get("code").getAsInt());
-                }
-            } catch (Exception e) {
-                // Fallback to HTTP code
-            }
-            return String.valueOf(httpCode);
-        }
-
-        public static class Builder {
-            private int httpCode;
-            private boolean isSuccess;
-            private String responseBody;
-            private String statusMessage;
-
-            public Builder httpCode(int httpCode) {
-                this.httpCode = httpCode;
-                return this;
-            }
-
-            public Builder isSuccess(boolean isSuccess) {
-                this.isSuccess = isSuccess;
-                return this;
-            }
-
-            public Builder responseBody(String responseBody) {
-                this.responseBody = responseBody;
-                return this;
-            }
-
-            public Builder statusMessage(String statusMessage) {
-                this.statusMessage = statusMessage;
-                return this;
-            }
-
-            public ApiResponse build() {
-                return new ApiResponse(httpCode, isSuccess, responseBody, statusMessage);
-            }
-        }
+        return baseUrl + "/" + endpointOrUrl;
     }
 }
